--- a/data/retrieve_data.ipynb
+++ b/data/retrieve_data.ipynb
@@ -68,20 +68,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "R[write to console]: Loading required package: lattice\n",
-      "\n",
-      "R[write to console]: Loading required package: ggplot2\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np                #for manipulating arrays\n",
     "import pandas as pd               #for loading/writing/manipulating tabular data\n",
@@ -103,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
@@ -291,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -382,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -480,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -532,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -584,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -630,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -676,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -740,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -784,7 +773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -794,19 +783,19 @@
     "8,2,1\n",
     "7,2,1\n",
     "8,3,1\n",
-    "3,2,3\n",
+    "1.5,1.75,3\n",
     "1,3,3\n",
-    "4,4,3\n",
+    "0.5,4,3\n",
     "2,4,3\n",
     "7,6,2\n",
     "6,6,2\n",
     "7,7,2\n",
     "6,7,2\n",
     "5,7,2\n",
-    "9,8,2\n",
+    "9.5,8,2\n",
     "7,8,2\n",
-    "9,9,2\n",
-    "5,9,2\n",
+    "8.3,9,2\n",
+    "4,8,2\n",
     "2,3,3\n",
     "'''\n",
     "\n",
@@ -828,7 +817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 9,
    "metadata": {
     "scrolled": false
    },
@@ -839,111 +828,16 @@
      "text": [
       "Validating all datasets\n",
       "\n",
-      "Processing state_property_vote\n",
-      "Obtaining data from source...\n",
-      "Downloading 2016 census data from http://datausa.io\n",
-      "Downloading 2016 vote data from http://www.fec.gov\n",
-      "Computing hash...\n",
-      "Hash matches for fresh copy of state_property_vote obtained from source\n",
-      "Obtaining data from storage...\n",
-      "Computing hash...\n",
-      "Hash matches for storage copy of state_property_vote\n",
-      "\n",
-      "\n",
-      "Processing us_vote\n",
-      "Obtaining data from source...\n",
-      "Computing hash...\n",
-      "Hash matches for fresh copy of us_vote obtained from source\n",
-      "Obtaining data from storage...\n",
-      "Computing hash...\n",
-      "Hash matches for storage copy of us_vote\n",
-      "\n",
-      "\n",
-      "Processing mtcars\n",
-      "Obtaining data from source...\n",
-      "Obtaining mtcars from the R kernel\n",
-      "Computing hash...\n",
-      "Hash matches for fresh copy of mtcars obtained from source\n",
-      "Obtaining data from storage...\n",
-      "Computing hash...\n",
-      "Hash matches for storage copy of mtcars\n",
-      "\n",
-      "\n",
-      "Processing mauna_loa\n",
-      "Obtaining data from source...\n",
-      "Downloading co2_mm_mlo.txt from aftp.cmdl.noaa.gov\n",
-      "Computing hash...\n",
-      "Hash matches for fresh copy of mauna_loa obtained from source\n",
-      "Obtaining data from storage...\n",
-      "Computing hash...\n",
-      "Hash matches for storage copy of mauna_loa\n",
-      "\n",
-      "\n",
-      "Processing islands\n",
-      "Obtaining data from source...\n",
-      "Obtaining islands data from the R kernel\n",
-      "Computing hash...\n",
-      "Hash matches for fresh copy of islands obtained from source\n",
-      "Obtaining data from storage...\n",
-      "Computing hash...\n",
-      "Hash matches for storage copy of islands\n",
-      "\n",
-      "\n",
-      "Processing faithful\n",
-      "Obtaining data from source...\n",
-      "Obtaining faithful from the R kernel\n",
-      "Computing hash...\n",
-      "Hash matches for fresh copy of faithful obtained from source\n",
-      "Obtaining data from storage...\n",
-      "Computing hash...\n",
-      "Hash matches for storage copy of faithful\n",
-      "\n",
-      "\n",
-      "Processing michelson\n",
-      "Obtaining data from source...\n",
-      "Obtaining morley from the R kernel\n",
-      "Computing hash...\n",
-      "Hash matches for fresh copy of michelson obtained from source\n",
-      "Obtaining data from storage...\n",
-      "Computing hash...\n",
-      "Hash matches for storage copy of michelson\n",
-      "\n",
-      "\n",
-      "Processing unscaled_wdbc\n",
-      "Obtaining data from source...\n",
-      "Downloading from https://archive.ics.uci.edu/ml/machine-learning-databases/breast-cancer-wisconsin/wdbc.data\n",
-      "Computing hash...\n",
-      "Hash matches for fresh copy of unscaled_wdbc obtained from source\n",
-      "Obtaining data from storage...\n",
-      "Computing hash...\n",
-      "Hash matches for storage copy of unscaled_wdbc\n",
-      "\n",
-      "\n",
-      "Processing wdbc\n",
-      "Obtaining data from source...\n",
-      "Downloading from https://archive.ics.uci.edu/ml/machine-learning-databases/breast-cancer-wisconsin/wdbc.data\n",
-      "Computing hash...\n",
-      "Hash matches for fresh copy of wdbc obtained from source\n",
-      "Obtaining data from storage...\n",
-      "Computing hash...\n",
-      "Hash matches for storage copy of wdbc\n",
-      "\n",
-      "\n",
-      "Processing sacramento\n",
-      "Obtaining data from source...\n",
-      "Obtaining Sacramento from the R kernel\n",
-      "Computing hash...\n",
-      "Hash matches for fresh copy of sacramento obtained from source\n",
-      "Obtaining data from storage...\n",
-      "Computing hash...\n",
-      "Hash matches for storage copy of sacramento\n",
-      "\n",
-      "\n",
       "Processing marketing\n",
       "Obtaining data from source...\n",
       "Creating marketing data\n",
       "Computing hash...\n",
-      "Hash matches for fresh copy of marketing obtained from source\n",
+      "Hash mismatch for fresh copy of marketing; source changed.\n",
+      "Original Hash: 9b49d36e53fd474bb7ca04b879a5219f41589c37\n",
+      "New Hash: 7fee2c0c0689406eb077d1ffb7492d56fb56220f\n",
+      "Saving new cleaned data in marketing_new.csv\n",
+      "If you want to use the new data, remove the old data and rename that file to marketing.csv\n",
+      "Then update the hash in this notebook for marketing to 7fee2c0c0689406eb077d1ffb7492d56fb56220f\n",
       "Obtaining data from storage...\n",
       "Computing hash...\n",
       "Hash matches for storage copy of marketing\n",
@@ -995,13 +889,6 @@
     "        print('Cannot load ' + dnm + ' from storage. Check that the file exists.')   \n",
     "    print('\\n')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -1020,7 +907,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
