--- a/07-regression1.Rmd
+++ b/07-regression1.Rmd
@@ -56,7 +56,7 @@ the data as a scatter plot where we place the predictor/explanatory variable
 (house size) on the x-axis, and we place the target/response variable that we
 want to predict (price) on the y-axis:
 
-```{r 07-edaRegr, message = FALSE, fig.height = 4, fig.width = 5}
+```{r 07-edaRegr, message = FALSE, fig.height = 4, fig.width = 5, fig.cap = "Scatter plot of price (USD) versus house size (square footage)"}
 eda <- ggplot(sacramento, aes(x = sqft, y = price)) +
   geom_point(alpha = 0.4) +
   xlab("House size (square footage)") +
@@ -100,7 +100,7 @@ sale prices we have already observed. But in the plot below, we have no
 observations of a house of size *exactly* 2000 square feet. How can we predict
 the price? 
 
-```{r 07-small-eda-regr, fig.height = 4, fig.width = 5}
+```{r 07-small-eda-regr, fig.height = 4, fig.width = 5, fig.cap = "Scatter plot of price (USD) versus house size (square footage) with vertical line indicating 2000 square feet on x-axis"}
 small_plot <- ggplot(small_sacramento, aes(x = sqft, y = price)) +
   geom_point() +
   xlab("House size (square footage)") +
@@ -123,7 +123,7 @@ nearest_neighbours <- small_sacramento %>%
 nearest_neighbours
 ```
 
-```{r 07-knn3-example, echo = FALSE, fig.height = 4, fig.width = 5}
+```{r 07-knn3-example, echo = FALSE, fig.height = 4, fig.width = 5, fig.cap = "Scatter plot of price (USD) versus house size (square footage) with lines to 5 nearest neighbours"}
 nearest_neighbours <- mutate(nearest_neighbours, twothou = rep(2000, 5))
 nn_plot <- small_plot +
   geom_segment(
@@ -144,7 +144,7 @@ prediction <- nearest_neighbours %>%
 prediction
 ```
 
-```{r 07-predictedViz-knn, echo = FALSE, fig.height = 4, fig.width = 5}
+```{r 07-predictedViz-knn, echo = FALSE, fig.height = 4, fig.width = 5, fig.cap = "Scatter plot of price (USD) versus house size (square footage) with predicted price for a 2000 square-foot house based on 5 nearest neighbours represented as a red dot"}
 nn_plot +
   geom_point(aes(x = 2000, y = prediction[[1]]), color = "red", size = 2.5)
 ```
@@ -267,7 +267,7 @@ Here we can see that the smallest RMSPE occurs when $K =$ `r sacr_min %>% pull(n
 Similar to the setting of classification, by setting the number of neighbours
 to be too small or too large, we cause the RMSPE to increase:
 
-```{r 07-choose-k-knn-plot, echo = FALSE, fig.height = 4, fig.width = 5} 
+```{r 07-choose-k-knn-plot, echo = FALSE, fig.height = 4, fig.width = 5, fig.cap = "Effect of the number of neighbours on the RMSPE"} 
 sacr_results <- sacr_results %>%
   filter(.metric == "rmse")
 
@@ -286,7 +286,7 @@ predict a price for every possible home size across the range of home sizes we
 observed in the data set (here 500 to 4250 square feet) and we plot the
 predicted prices as a blue line:
 
-```{r 07-howK, echo = FALSE, fig.height = 12, fig.width = 10}
+```{r 07-howK, echo = FALSE, fig.height = 12, fig.width = 10,fig.cap = "Predicted values for house price (represented as a blue line) from K-NN regression models for six different values for $K$"}
 kmin <- sacr_min %>% pull(neighbors)
 gridvals <- c(1, 3, kmin, 41, 250, 450)
 
@@ -412,7 +412,7 @@ house sizes we might encounter in the Sacramento area? We plotted it above
 where we explored how $k$ affects K-NN regression, but we show it again now,
 along with the code that generated it:
 
-```{r 07-predict-all, fig.height = 4, fig.width = 5}
+```{r 07-predict-all, fig.height = 4, fig.width = 5, fig.cap = "Predicted values for house price (represented as a blue line) for K-NN regression model with $K = 14$"}
 set.seed(1234)
 sacr_preds <- sacr_fit %>%
   predict(sacramento_train) %>%
@@ -466,7 +466,7 @@ visualizing the data, before we start modeling the data. Thus the first thing
 we will do is use ggpairs (from the `GGally` package) to plot all the variables
 we are interested in using in our analyses:
 
-```{r 07-ggpairs, fig.height = 5, fig.width = 6}
+```{r 07-ggpairs, fig.height = 5, fig.width = 6, fig.cap = "Scatterplots of each pair of variables (price, house size, and the number of bedrooms) are displayed in the figure's bottom left corner. Correlation coefficients are shown in the top right corner. The distributions of price, house size and number of bedrooms are each shown along the diagonal."}
 library(GGally)
 plot_pairs <- sacramento %>%
   select(price, sqft, beds) %>%
@@ -535,7 +535,7 @@ by a large amount by adding this additional predictor.
 We can also visualize the model's predictions overlaid on top of the data. This time the predictions
 will be a surface in 3-D space, instead of a line in 2-D space, as we have 2
 predictors instead of 1. 
-```{r 07-knn-mult-viz, echo = FALSE, message = FALSE, warning = FALSE}
+```{r 07-knn-mult-viz, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "K-NN regression model’s predictions represented as a surface in 3-D space overlaid on top of the data using three predictors (price, house size, and the number of bedrooms)"}
 library(plotly)
 
 xvals <- seq(from = min(sacramento_train$sqft), to = max(sacramento_train$sqft), length = 50)
