added figure captions to ch 8

--- a/08-regression2.Rmd
+++ b/08-regression2.Rmd
@@ -40,7 +40,7 @@ in purchasing with an advertised list price of
 To answer this question using simple linear regression, we use the data we have
 to draw the straight line of best fit through our existing data points:
 
-```{r 08-lin-reg1, message = FALSE, warning = FALSE, echo = FALSE, fig.height = 4, fig.width = 5}
+```{r 08-lin-reg1, message = FALSE, warning = FALSE, echo = FALSE, fig.height = 4, fig.width = 5, fig.cap = "Scatter plot of price (USD) versus house size (square footage) with line of best fit for subset of the Sacramento housing data set"}
 library(tidyverse)
 library(gridExtra)
 library(caret)
@@ -71,7 +71,7 @@ $\beta_0$ and $\beta_1$ that *parametrize* (correspond to) the line of best fit.
 Once we have the coefficients, we can use the equation above to evaluate the predicted price given the value we
 have for the predictor/explanatory variable&mdash;here 2,000 square feet. 
 
-```{r 08-lin-reg2, message = FALSE, warning = FALSE, echo = FALSE, fig.height = 4, fig.width = 5}
+```{r 08-lin-reg2, message = FALSE, warning = FALSE, echo = FALSE, fig.height = 4, fig.width = 5, fig.cap = "Scatter plot of price (USD) versus house size (square footage) with line of best fit and predicted price for a 2000 square foot home represented as a red dot"}
 small_model <- lm(price ~ sqft, data = small_sacramento)
 prediction <- predict(small_model, data.frame(sqft = 2000))
 
@@ -90,7 +90,7 @@ exactly does simple linear regression choose the line of best fit? Many
 different lines could be drawn through the data points. We show some examples
 below:
 
-```{r 08-several-lines, echo = FALSE, message = FALSE, warning = FALSE, fig.height = 4, fig.width = 5}
+```{r 08-several-lines, echo = FALSE, message = FALSE, warning = FALSE, fig.height = 4, fig.width = 5,  fig.cap = "Scatter plot of price (USD) versus house size (square footage) with many possible lines that could be drawn through the data points"}
 
 small_plot +
   geom_abline(intercept = -64542.23, slope = 190, color = "green") +
@@ -105,7 +105,7 @@ line. What exactly do we mean by the vertical distance between the predicted
 values (which fall along the line of best fit) and the observed data points?
 We illustrate these distances in the plot below with a red line:
 
-```{r 08-verticalDistToMin,  echo = FALSE, message = FALSE, warning = FALSE, fig.height = 4, fig.width = 5}
+```{r 08-verticalDistToMin,  echo = FALSE, message = FALSE, warning = FALSE, fig.height = 4, fig.width = 5, fig.cap = "Scatter plot of price (USD) versus house size (square footage) with the vertical distances between the predicted values and the observed data points"}
 small_sacramento <- small_sacramento %>%
   mutate(predicted = predict(small_model))
 small_plot +
@@ -194,7 +194,7 @@ plausible range to this line that we are not interested in at this point, so to
 avoid plotting it, we provide the argument `se = FALSE` in our call to
 `geom_smooth`.
 
-```{r 08-lm-predict-all, fig.height = 4, fig.width = 5, warning = FALSE, message = FALSE}
+```{r 08-lm-predict-all, fig.height = 4, fig.width = 5, warning = FALSE, message = FALSE, fig.cap = "Scatter plot of price (USD) versus house size (square footage) with line of best fit for complete Sacramento housing data set"}
 
 lm_plot_final <- ggplot(sacramento_train, aes(x = sqft, y = price)) +
   geom_point(alpha = 0.4) +
@@ -224,7 +224,7 @@ simple linear regression model predictions for the Sacramento real estate data
 (predicting price from house size) and the "best" K-NN regression model
 obtained from the same problem:
 
-```{r 08-compareRegression, echo = FALSE, warning = FALSE, message = FALSE, fig.height = 4, fig.width = 10}
+```{r 08-compareRegression, echo = FALSE, warning = FALSE, message = FALSE, fig.height = 4, fig.width = 10, fig.cap = "Comparison of simple linear regression and K-NN regression"}
 set.seed(1234)
 sacr_spec <- nearest_neighbor(weight_func = "rectangular", neighbors = 30) %>%
   set_engine("kknn") %>%
@@ -362,7 +362,7 @@ lm_mult_test_results
 
 In the case of two predictors, our linear regression creates a *plane* of best fit, shown below:
 
-```{r 08-3DlinReg, echo = FALSE, message = FALSE, warning = FALSE}
+```{r 08-3DlinReg, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Simple linear regression model’s predictions represented as a plane overlaid on top of the data using three predictors (price, house size, and the number of bedrooms)"}
 library(plotly)
 xvals <- seq(from = min(sacramento_train$sqft), to = max(sacramento_train$sqft), length = 50)
 yvals <- seq(from = min(sacramento_train$beds), to = max(sacramento_train$beds), length = 50)
