--- a/references.bib
+++ b/references.bib
@@ -65,3 +65,19 @@
   year={2014}
 }
 
+@online{custexample,
+  author = {Geoff Fripp},
+  title = {Using Cluster Analysis for Market Segmentation},
+  year = 2020,
+  url = {http://www.segmentationstudyguide.com/using-cluster-analysis-for-market-segmentation},
+  urldate = {2020-12-15}
+}
+
+@book{james2013introduction,
+  title={An introduction to statistical learning},
+  author={James, Gareth and Witten, Daniela and Hastie, Trevor and Tibshirani, Robert},
+  volume={112},
+  year={2013},
+  publisher={Springer}
+}
+
