removed head from classification and regression chapters

--- a/05-classification.Rmd
+++ b/05-classification.Rmd
@@ -100,11 +100,11 @@ library(forcats)
 
 In this case, the file containing the breast cancer data set is a simple `.csv`
 file with headers. We'll use the `read_csv` function with no additional
-arguments, and then the `head` function to inspect its contents:
+arguments, and then inspect its contents:
 
 ```{r 05-read-data}
 cancer <- read_csv("data/wdbc.csv")
-head(cancer)
+cancer
 ```
 
 **Variable descriptions**
@@ -140,7 +140,7 @@ total set of variables per image in this data set are:
 knitr::include_graphics("img/malignant_cancer.png")
 ```
 
-Below we use `glimpse` to preview the data frame. This function is similar to `head`, but can be easier to read when we have a lot of columns:
+Below we use `glimpse` to preview the data frame. This function can make it easier to inspect the data when we have a lot of columns:
 
 ```{r 05-glimpse}
 glimpse(cancer)
@@ -405,7 +405,7 @@ cancer %>%
   select(ID, Perimeter, Concavity, Class) %>%
   mutate(dist_from_new = sqrt((Perimeter - new_obs_Perimeter)^2 + (Concavity - new_obs_Concavity)^2)) %>%
   arrange(dist_from_new) %>%
-  head(n = 5)
+  slice(1:5) # subset the first 5 rows
 ```
 
 From this, we see that 3 of the 5 nearest neighbours to our new observation are
@@ -526,7 +526,7 @@ predictor variables and class label and store it as a new dataset named `cancer_
 ```{r 05-tidymodels-2}
 cancer_train <- cancer %>%
   select(Class, Perimeter, Concavity)
-head(cancer_train)
+cancer_train
 ```
 
 Next, we create a *model specification* for K-nearest neighbours classification
@@ -621,7 +621,7 @@ variables:
 unscaled_cancer <- read_csv("data/unscaled_wdbc.csv") %>%
   mutate(Class = as_factor(Class)) %>%
   select(Class, Area, Smoothness)
-head(unscaled_cancer)
+unscaled_cancer
 ```
 
 Looking at the unscaled / uncentered data above, you can see that the difference
@@ -668,7 +668,7 @@ on the recipes home page.
 We finally use the `bake` function to apply the recipe.
 ```{r 05-scaling-4}
 scaled_cancer <- bake(uc_recipe, unscaled_cancer)
-head(scaled_cancer)
+scaled_cancer
 ```
 
 Now let's generate the two scatter plots, one for `unscaled_cancer` and one for
