--- a/06-classification_continued.Rmd
+++ b/06-classification_continued.Rmd
@@ -184,7 +184,7 @@ model.
 ```{r 06-predict-test}
 cancer_test_predictions <- predict(knn_fit, cancer_test) %>%
   bind_cols(cancer_test)
-head(cancer_test_predictions)
+cancer_test_predictions
 ```
 
 **5. Compute the accuracy**
