--- a/07-regression1.Rmd
+++ b/07-regression1.Rmd
@@ -45,7 +45,7 @@ library(tidymodels)
 library(gridExtra)
 
 sacramento <- read_csv("data/sacramento.csv")
-head(sacramento)
+sacramento
 ```
 
 The purpose of this exercise is to understand whether we can we use house size
@@ -119,7 +119,7 @@ neighbours to our observation of a house that is 2000 square feet:
 nearest_neighbours <- small_sacramento %>%
   mutate(diff = abs(2000 - sqft)) %>%
   arrange(diff) %>%
-  head(5)
+  slice(1:5) #subset the first 5 rows
 nearest_neighbours
 ```
 
