--- a/09-clustering.Rmd
+++ b/09-clustering.Rmd
@@ -6,11 +6,10 @@ knitr::opts_chunk$set(warning = FALSE)
 
 ## Overview 
 As part of exploratory data analysis, it is often helpful to see if there are
-meaningful subgroups (or *clusters*) in the data; this grouping can be used to
+meaningful subgroups (or *clusters*) in the data; this grouping can be used 
 for many purposes, such as generating new questions or improving predictive analyses. 
 This chapter provides an introduction to clustering using the *K-means* algorithm,
-including techniques to choose the number of clusters as well as other practical
-considerations (such as scaling).
+including techniques to choose the number of clusters.
 
 ## Chapter learning objectives 
 By the end of the chapter, students will be able to:
@@ -18,11 +17,11 @@ By the end of the chapter, students will be able to:
 * Describe a case where clustering is appropriate, and what insight it might extract from the data.
 * Explain the K-means clustering algorithm.
 * Interpret the output of a K-means analysis.
-* Identify when it is necessary to scale variables before clustering and do this using R.
+* Identify when it is necessary to scale variables before clustering, and do this using R.
 * Perform K-means clustering in R using `kmeans`.
 * Use the elbow method to choose the number of clusters for K-means.
 * Visualize the output of K-means clustering in R using coloured scatter plots.
-* Describe advantages, limitations and assumptions of the K-means clustering algorithm.
+* Describe the advantages, limitations and assumptions of the K-means clustering algorithm.
 
 ## Clustering
 Clustering is a data analysis task involving separating a data set into
